--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <main class="main-content">
             <section id="about" class="section">
                 <div class="about-section">
-                    <img src="_DSC0973.JPG" alt="Michael Keoshkerian" class="profile-photo" onerror="this.src='_DSC0973.jpg'; this.onerror=null;">
+                    <img src="./DSC0973.JPG" alt="Michael Keoshkerian" class="profile-photo" onerror="this.src='DSC0973.jpg'; this.onerror=function(){this.src='profile.jpg';}">
                     <div class="about-content">
                         <h1>Who I Am</h1>
                         <p>I've spent most of my career behind the scenes—helping innovators, policymakers, and founders connect the dots and build meaningful things. From advising tech-focused public policy, to supporting university research partnerships, to now working with global companies looking to grow in Canada through my role at Toronto Global, my work has always centered on enabling others to succeed.</p>
