--- a/index.html
+++ b/index.html
@@ -92,10 +92,12 @@
             border-radius: 8px;
             object-fit: cover;
             flex-shrink: 0;
+            order: 2;
         }
 
         .about-content {
             flex: 1;
+            order: 1;
         }
 
         .section {
@@ -224,6 +226,7 @@
                 <li><a href="#projects" class="toc-link">Current Projects</a></li>
                 <li><a href="#writing" class="toc-link">Writing</a></li>
                 <li><a href="#adventures" class="toc-link">Bay Area Adventures</a></li>
+                <li><a href="#outside-work" class="toc-link">Outside of Work</a></li>
             </ul>
         </nav>
 
@@ -236,6 +239,7 @@
                         <h1>Who I Am</h1>
                         <p>I've spent most of my career behind the scenes—helping innovators, policymakers, and founders connect the dots and build meaningful things. From advising tech-focused public policy, to supporting university research partnerships, to now working with global companies looking to grow in Canada through my role at Toronto Global, my work has always centered on enabling others to succeed.</p>
                         <p>I studied at the University of Toronto and OCAD University, and I've always been drawn to the spaces where creativity, strategy, and community meet. While I don't come from a traditional founder path, I care deeply about the people who build—and about doing the quiet work that helps make that possible.</p>
+                        <p><strong>📍 Current location: Toronto</strong></p>
                         <p><a href="https://www.linkedin.com/in/michael-keoshkerian/" target="_blank">My LinkedIn</a></p>
                     </div>
                 </div>
@@ -244,7 +248,7 @@
             <section id="projects" class="section">
                 <h2>Current Projects</h2>
                 <div class="project-card">
-                    <h4>Advising US companies on hiring and expanding to Toronto and Canada</h4>
+                    <h4>Advising on Global growth strategy and investment into Canada</h4>
                     <p><a href="https://calendly.com/mkeoshkerian/" target="_blank">Book a time with me here</a></p>
                 </div>
                 <div class="project-card">
@@ -300,6 +304,16 @@
                     <p>Explore the companies I've helped expand into the Toronto Region, including Netflix, Ripple, Roku, and more. Test your memory in the Tech Match Game!</p>
                     <a href="game.html" class="btn">Play the Game</a>
                 </div>
+            </section>
+
+            <section id="outside-work" class="section">
+                <h2>Outside of Work</h2>
+                <ul>
+                    <li>I love cooking and eating.</li>
+                    <li>History buff - classical history in particular.</li>
+                    <li>Rowing, swimming</li>
+                    <li>Doing evening rides on my motorcycle (I'm still practising)</li>
+                </ul>
             </section>
         </main>
     </div>
