--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             <h4>Easy Friendships, Heavy Burdens</h4>
                             <p><em>Persona fatigue, and why real relationships is the long game</em></p>
                             <p>When I started working at Canadian Tire—my first real job—I ended up shadowing this guy named Kevin. He wasn't management, but he ran the floor like it was his. Everyone liked him. He always had a joke ready, remembered customers' names, and could charm a frustrated senior into buying the wrong socket wrench and thanking him for it...</p>
-                            <p><a href="#" onclick="toggleEssay(); return false;" id="essay-toggle">Read more</a></p>
+                            <p><a href="javascript:void(0);" onclick="toggleEssay();" id="essay-toggle">Read more</a></p>
                             <div id="full-essay" style="display: none;">
                                 <p>But here's the thing: Kevin didn't actually know that much about tools. He'd ask me questions about SKUs that I, a 17-year-old barely trained seasonal hire, had to guess my way through. But it didn't matter. Kevin understood people—and in retail, that's 90% of the job.</p>
                                 <p>He couldn't explain how he did it. You just had to watch. I did.</p>
@@ -318,7 +318,7 @@
                             <p>Let's get something out of the way: trade wars are no longer abstract. They're not chapter headings in economics textbooks or theoretical debates in Ottawa or D.C. They're real, they're messy, and they're directly impacting how we build companies, pick markets, and hedge global risk. And right now, Canada—yes, quiet, friendly, under-the-radar Canada—is in the crosshairs of a full-blown trade rupture with the United States.</p>
                             <p>In a scenario that feels plucked from satire but is deeply real, a returned President Trump has re-imposed sweeping tariffs on Canadian goods. And Canada? It's not backing down. New Prime Minister Mark Carney has retaliated with tariffs of his own, declared the "friendship is over," and begun a major diversification push. The gloves are off. This isn't NAFTA-era soft power. It's elbows-up economic nationalism.</p>
                             <p>In my work at Toronto Global, supporting international companies expanding into the Toronto Region—particularly U.S. firms across sectors from tech to advanced manufacturing to life sciences—the question is no longer if this will affect us. It's how we respond—and how we keep delivering certainty in uncertain times...</p>
-                            <p><a href="#" onclick="toggleTradeEssay(); return false;" id="trade-essay-toggle">Read more</a></p>
+                            <p><a href="javascript:void(0);" onclick="toggleTradeEssay();" id="trade-essay-toggle">Read more</a></p>
                             <div id="full-trade-essay" style="display: none;">
                                 <h4>How We Got Here: The Pendulum Always Swings</h4>
                                 <p>Canada's trade history with the U.S. is one of both codependency and caution. We've had periods of deep integration—from the 1965 Auto Pact to the 1989 FTA to NAFTA—followed by waves of protectionism. The 1930s brought the Smoot-Hawley disaster. The 2010s saw Trump's steel and aluminum tariffs. And now, in 2025, we're back in the thick of it.</p>
@@ -456,6 +456,20 @@
                 toggleLink.textContent = 'Read less';
             } else {
                 fullEssay.style.display = 'none';
+                toggleLink.textContent = 'Read more';
+            }
+        }
+
+        // Toggle trade essay display
+        function toggleTradeEssay() {
+            const fullTradeEssay = document.getElementById('full-trade-essay');
+            const toggleLink = document.getElementById('trade-essay-toggle');
+            
+            if (fullTradeEssay.style.display === 'none') {
+                fullTradeEssay.style.display = 'block';
+                toggleLink.textContent = 'Read less';
+            } else {
+                fullTradeEssay.style.display = 'none';
                 toggleLink.textContent = 'Read more';
             }
         }
