--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<ul class="t<!DOCTYPE html>
+.project-card {
+            background: linear-gradient(135deg, #f9f6f0 0%, #f5f2eb 100%);
+            border: 1px solid #e8e4db;
+            border-radius: 12px;
+            padding: 2rem;
+            margin: 1.5rem 0;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
+
+        .project-card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+            border-color: #            <ul class="t<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -264,14 +277,17 @@
                 <h2>Current Projects</h2>
                 <div class="project-card">
                     <h4>Advising on Global growth strategy and investment into Canada</h4>
+                    <p>I work with international companies—especially from the U.S.—looking to establish or expand their presence in Canada. This involves everything from market entry strategy and site selection to navigating regulatory requirements and building local partnerships. Through my role at Toronto Global, I've helped companies across sectors like tech, life sciences, and advanced manufacturing understand the Canadian market, access talent, and leverage incentives. Whether you're a startup looking for your first international office or a scale-up ready to tap into Canada's innovation ecosystem, I provide the strategic guidance to make your expansion successful.</p>
                     <p><a href="https://calendly.com/mkeoshkerian/" target="_blank">Book a time with me here</a></p>
                 </div>
                 <div class="project-card">
                     <h4>Pancake Networking</h4>
+                    <p>Sometimes the best business conversations happen over breakfast. Instead of formal networking events with business cards and elevator pitches, we gather over good food and real conversation. It's where entrepreneurs, investors, and business leaders can connect without the usual corporate pretense—just genuine discussion about challenges, opportunities, and what we're actually working on. But let's be honest—I love pancakes, and this is basically my professional excuse to eat them guilt-free.</p>
                     <p><a href="https://www.linkedin.com/feed/update/urn:li:activity:7289673554197950465/?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7289673554197950465%29" target="_blank">Check out my LinkedIn post</a></p>
                 </div>
                 <div class="project-card">
                     <h4>Boardroom Briefs</h4>
+                    <p>An interview series we produce where we sit down with business leaders, policy makers, and industry experts to break down complex economic and business topics. You can find the episodes on Toronto Global's YouTube page. Think of it as translating the jargon-heavy world of trade policy, economic strategy, and business development into insights that actually matter for decision-makers. Each interview tackles a specific challenge or opportunity that's relevant to companies operating in the current global landscape—from navigating trade tensions to understanding new market opportunities.</p>
                     <p><a href="https://youtu.be/2YwfSIR31eQ?si=_cSNTKzTWuoslN7A" target="_blank">Watch the video</a></p>
                 </div>
             </section>
