--- a/index.html
+++ b/index.html
@@ -1,17 +1,4 @@
-.project-card {
-            background: linear-gradient(135deg, #f9f6f0 0%, #f5f2eb 100%);
-            border: 1px solid #e8e4db;
-            border-radius: 12px;
-            padding: 2rem;
-            margin: 1.5rem 0;
-            transition: all 0.3s ease;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-        }
-
-        .project-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 16px rgba(0,0,0,0.1);
-            border-color: #            <ul class="t<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -111,11 +98,6 @@
         .about-content {
             flex: 1;
             order: 1;
-        }
-
-        .expanded-content {
-            grid-column: 1 / -1;
-            margin-top: 1rem;
         }
 
         .section {
@@ -262,7 +244,7 @@
         <main class="main-content">
             <section id="about" class="section">
                 <div class="about-section">
-                    <img src="./DSC0973.JPG" alt="Michael Keoshkerian" class="profile-photo" onerror="this.src='DSC0973.jpg'; this.onerror=function(){this.src='profile.jpg';}">
+                    <img src="profile.jpg" alt="Michael Keoshkerian" class="profile-photo">
                     <div class="about-content">
                         <h1>Who I Am</h1>
                         <p>I've spent most of my career behind the scenes—helping innovators, policymakers, and founders connect the dots and build meaningful things. From advising tech-focused public policy, to supporting university research partnerships, to now working with global companies looking to grow in Canada through my role at Toronto Global, my work has always centered on enabling others to succeed.</p>
@@ -276,7 +258,7 @@
             <section id="projects" class="section">
                 <h2>Current Projects</h2>
                 <div class="project-card">
-                    <h4>Advising on Global growth strategy and investment into Canada</h4>
+                    <h4>Advising on global growth strategy and investment into Canada</h4>
                     <p>I work with international companies—especially from the U.S.—looking to establish or expand their presence in Canada. This involves everything from market entry strategy and site selection to navigating regulatory requirements and building local partnerships. Through my role at Toronto Global, I've helped companies across sectors like tech, life sciences, and advanced manufacturing understand the Canadian market, access talent, and leverage incentives. Whether you're a startup looking for your first international office or a scale-up ready to tap into Canada's innovation ecosystem, I provide the strategic guidance to make your expansion successful.</p>
                     <p><a href="https://calendly.com/mkeoshkerian/" target="_blank">Book a time with me here</a></p>
                 </div>
@@ -287,7 +269,7 @@
                 </div>
                 <div class="project-card">
                     <h4>Boardroom Briefs</h4>
-                    <p>An interview series we produce where we sit down with business leaders, policy makers, and industry experts to break down complex economic and business topics. You can find the episodes on Toronto Global's YouTube page. Think of it as translating the jargon-heavy world of trade policy, economic strategy, and business development into insights that actually matter for decision-makers. Each interview tackles a specific challenge or opportunity that's relevant to companies operating in the current global landscape—from navigating trade tensions to understanding new market opportunities.</p>
+                    <p>An interview series we produce where we sit down with business leaders, policy makers, and industry experts to break down complex economic and business topics. Think of it as translating the jargon-heavy world of trade policy, economic strategy, and business development into insights that actually matter for decision-makers. Each interview tackles a specific challenge or opportunity that's relevant to companies operating in the current global landscape—from navigating trade tensions to understanding new market opportunities.</p>
                     <p><a href="https://youtu.be/2YwfSIR31eQ?si=_cSNTKzTWuoslN7A" target="_blank">Watch the video</a></p>
                 </div>
             </section>
@@ -471,7 +453,6 @@
         function toggleEssay() {
             const fullEssay = document.getElementById('full-essay');
             const toggleLink = document.getElementById('essay-toggle');
-            const writingGrid = fullEssay.closest('div[style*="grid-template-columns"]');
             
             if (fullEssay.style.display === 'none') {
                 fullEssay.style.display = 'block';
