--- a/index.html
+++ b/index.html
@@ -343,6 +343,26 @@
                             </div>
                         </div>
                     </div>
+<div class="project-card">
+    <h4>The Strength in Seeing</h4>
+    <p><em>Small moments of care that shape us</em></p>
+    <p><a href="javascript:void(0);" onclick="toggleSeeing();" id="seeing-toggle">Read more</a></p>
+    <div id="full-seeing" style="display: none;">
+        <p>Every so often, you catch it. Someone close to breaking. It’s not loud or dramatic. There’s no scene. Just a small fracture at the edge of their face, the kind we’ve all carried at some point. They might be sitting a little too still, or speaking in a tone that feels almost too careful, as if any sudden movement might cause the whole thing to crack open.</p>
+        <p>It’s subtle enough that you could miss it entirely if you weren’t paying attention. And most people do.</p>
+        <p>In those moments, you face a choice. You can look away, because that’s the easier thing to do. The thing we’ve been trained for. You can give them their space, pretend you didn’t notice, tell yourself you’d only make it worse by stepping in. We convince ourselves that’s the polite option, that it’s what they would want.</p>
+        <p>Or you can do the harder thing.</p>
+        <p>Not the big, dramatic, world-saving thing. Just the quiet, human act of not letting someone carry the full weight of their invisibility. That doesn’t have to mean a grand gesture. It might simply mean holding their gaze for a moment longer than you normally would. Or saying something small and soft, in a way no one else can hear. Or offering a resource, a nudge, a reminder that they’re not completely alone—even though you may never know whether it helped.</p>
+        <p>Because you don’t know what people are carrying. You don’t know how close someone might be to breaking. And you may never know what difference it makes when you choose to notice. But it does make a difference.</p>
+        <p>I think about these moments long after they pass. The person on the bench. The colleague whose words sounded a little too measured, as if they might splinter if pushed even slightly. The friend at dinner who pushed food around their plate and smiled at all the right times but never truly joined the conversation. I may not know the full story of what they were carrying, but I do know I was able to offer something small. A word, a resource, a quiet moment of acknowledgment—and I hope it lightened things for them, even just a little.</p>
+        <p>It’s not about changing the world. It’s not about a lesson. It’s about one person noticing another, just long enough for them to feel less alone. That’s all.</p>
+        <p>Because strength isn’t always about holding your own line. Sometimes it’s about holding the line for someone else, even for just a moment, without them ever having to ask.</p>
+        <p>That’s not about being a savior. It’s about being human.</p>
+        <p>And the truth is, those moments don’t just help the other person. They shape us too. They remind us that the people around us are more than passing shapes in a crowd. They remind us that we are all, at different times, the one holding it together by a thread.</p>
+        <p>Maybe that’s the quiet purpose of it all. To be the kind of person who notices. To step just slightly outside the cultural script that tells us to stay separate. To take the risk of showing a small act of care, even when it would be easier not to.</p>
+        <p>Because we never know when that one small choice might mean more than we can imagine.</p>
+    </div>
+</div>
                     
                     <!-- Professional Column -->
                     <div>
