--- a/index.html
+++ b/index.html
@@ -392,11 +392,11 @@
                             <h4>Toward Dominion: A Civic and Industrial Mission for a Resilient Canada</h4>
                             <p><em>A personal initiative focused on strengthening Canada’s defense-tech and strategic industrial ecosystem</em></p>
                             <p>This piece outlines a civic and industrial mission built around two pillars: <strong>Talent</strong> and <strong>Energy</strong>. It’s inspired by American Dynamism, but rooted in Canada’s own industrial, technological, and civic capacity. I view this as the start of a long-term effort—and a call to action.</p>
-                            <p><a href="Toward_Dominion_Manifesto_FINAL.pdf" target="_blank">Download the full manifesto (DOCX)</a></p>
+                            <p><a href="Toward_Dominion_Manifesto_FINAL.pdf" target="_blank">Download the full thesis </a></p>
                         </div>
                     </div>
-                </div>
-            </section>
+            </div>
+        </section>
 
             <section id="adventures" class="section">
                 <h2>Bay Area Adventures</h2>
