--- a/index.html
+++ b/index.html
@@ -381,21 +381,20 @@
                         </div>
 
                         <div class="project-card">
-                            <h4>Why I'm Thinking About a "Lux North"</h4>
-                            <p><em>Building Canada's strategic deep tech engine</em></p>
-                            <p>Over the past year, I've been obsessed with a question: What would it take to build a Canadian version of Lux Capital? A fund that backs dual-use technologies—those that serve both civilian and national security needs. One that helps founders solve big, messy problems that actually matter.</p>
-                            <p>This isn't just about venture capital. It's about what kind of country we want to be.</p>
-                            <p><a href="lux-north-strategic-deep-tech.pdf" target="_blank">Read the full analysis (PDF)</a></p>
-                        </div>
-                    </div>
-                        <div class="project-card">
-                            <h4>Toward Dominion: A Civic and Industrial Mission for a Resilient Canada</h4>
-                            <p><em>A personal initiative focused on strengthening Canada’s defense-tech and strategic industrial ecosystem</em></p>
-                            <p>This piece outlines a civic and industrial mission built around two pillars: <strong>Talent</strong> and <strong>Energy</strong>. It’s inspired by American Dynamism, but rooted in Canada’s own industrial, technological, and civic capacity. I view this as the start of a long-term effort—and a call to action.</p>
-                            <p><a href="Toward_Dominion_Manifesto_FINAL.pdf" target="_blank">Download the full thesis </a></p>
-                        </div>
-                    </div>
-            </div>
+        <h4>Why I'm Thinking About a "Lux North"</h4>
+        <p><em>Building Canada's strategic deep tech engine</em></p>
+        <p>Over the past year, I've been obsessed with a question: What would it take to build a Canadian version of Lux Capital?...</p>
+        <p><a href="lux-north-strategic-deep-tech.pdf" target="_blank">Read the full analysis (PDF)</a></p>
+      </div>
+
+      <div class="project-card">
+        <h4>Toward Dominion: A Civic and Industrial Mission for a Resilient Canada</h4>
+        <p><em>A personal initiative focused on strengthening Canada’s defense-tech and strategic industrial ecosystem</em></p>
+        <p>This piece outlines a civic and industrial mission built around two pillars: <strong>Talent</strong> and <strong>Energy</strong>. It’s inspired by American Dynamism, but rooted in Canada’s own industrial, technological, and civic capacity. I view this as the start of a long-term effort—and a call to action.</p>
+        <p><a href="Toward_Dominion_Manifesto_FINAL.pdf" target="_blank">Download the full thesis </a></p>
+      </div>
+    </div> 
+  </div>
         </section>
 
             <section id="adventures" class="section">
