--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <div class="project-card">
                     <h4>Boardroom Briefs</h4>
                     <p>An interview series we produce where we sit down with business leaders, policy makers, and industry experts to break down complex economic and business topics. Think of it as translating the jargon-heavy world of trade policy, economic strategy, and business development into insights that actually matter for decision-makers. Each interview tackles a specific challenge or opportunity that's relevant to companies operating in the current global landscape—from navigating trade tensions to understanding new market opportunities.</p>
-                    <p><a href="https://youtu.be/2YwfSIR31eQ?si=_cSNTKzTWuoslN7A" target="_blank">Watch the video</a></p>
+                    <p><a href="https://www.youtube.com/watch?v=88nDCIqVZjA" target="_blank">Watch the video</a></p>
                 </div>
             </section>
 
