--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@
             <section id="projects" class="section">
                 <h2>Current Projects</h2>
                 <div class="project-card">
+                    <h4>Defence Technology and National Security</h4>
+                    <p>I am actively building bridges across Canada's defence, technology, and investment ecosystem. My work brings together founders, investors, veterans, and policy leaders to explore how Canadian talent, capital, and industrial capacity can be mobilized for national resilience.</p>
+                    <p>Through dinners, curated conversations, and partnerships, I am shaping a civic and industrial mission that connects frontier technologies—AI, autonomy, advanced manufacturing—with real-world defence and security needs. This work draws on my experience at Toronto Global, where I've supported international tech expansions, and extends into my personal thesis on how Canada can define its role in the global security and industrial landscape.</p>
+                    <p>At its heart, this project is about convening the right people and pushing forward ideas that strengthen both Canada's innovation economy and its national security.</p>
+                    <p><a href="https://www.linkedin.com/feed/update/urn:li:activity:7366825174609887232/" target="_blank">More here</a></p>
+                </div>
+                <div class="project-card">
                     <h4>Advising on global growth strategy and investment into Canada</h4>
                     <p>I work with international companies—especially from the U.S.—looking to establish or expand their presence in Canada. This involves everything from market entry strategy and site selection to navigating regulatory requirements and building local partnerships. Through my role at Toronto Global, I've helped companies across sectors like tech, life sciences, and advanced manufacturing understand the Canadian market, access talent, and leverage incentives. Whether you're a startup looking for your first international office or a scale-up ready to tap into Canada's innovation ecosystem, I provide the strategic guidance to make your expansion successful.</p>
                     <p><a href="https://calendly.com/mkeoshkerian/" target="_blank">Book a time with me here</a></p>
