--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     <li>I love cooking and eating.</li>
                     <li>History buff - classical history in particular.</li>
                     <li>Rowing, swimming</li>
-                    <li>Doing evening rides on my motorcycle (I'm still practising)</li>
+                    <li>Doing evening rides on my motorcycle</li>
                 </ul>
             </section>
 
