--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@
                                 <p>Because the people I want around aren't my customers. They're the ones I'll hike with, over and over, for the rest of my life. And for that kind of trip, I need to pack light.</p>
                             </div>
                         </div>
+        </div>
 
                         <div class="project-card">
                             <h4>The Quiet Permission of Walkabouts</h4>
